plugins {
	id 'java'
	id 'org.springframework.boot' version "$springBootVersion"
	id 'io.spring.dependency-management' version "$springDependencyVersion"
}

group = 'demo.cinema'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

compileJava {
	options.compilerArgs += [
			'-Amapstruct.defaultComponentModel=spring',
			'-Amapstruct.unmappedTargetPolicy=IGNORE'
	]
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation group: 'org.springframework.security', name: 'spring-security-config', version: '6.0.6'
	implementation group: 'org.springframework.security', name: 'spring-security-web', version: '6.0.6'
	implementation group: 'org.springframework.security', name: 'spring-security-core', version: '6.0.6'
	implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '6.0.6'
	implementation group: 'org.hibernate', name: 'hibernate-core', version: '6.2.6.Final', ext: 'pom'
	implementation 'org.hibernate:hibernate-entitymanager:5.6.15.Final'
	implementation 'org.hibernate:hibernate-core:6.2.0.Final'


	implementation 'org.liquibase:liquibase-core'
	implementation "org.mapstruct:mapstruct:$mapStructVersion"
	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	compileOnly 'org.projectlombok:lombok'

	runtimeOnly 'com.mysql:mysql-connector-j'

	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor "org.mapstruct:mapstruct-processor:$mapStructVersion"

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation group: 'org.springframework.security', name: 'spring-security-test', version: '6.0.6'


}

tasks.named('test') {
	useJUnitPlatform()
}
